--- a/app/views/dashboard/_logs.html.haml
+++ b/app/views/dashboard/_logs.html.haml
@@ -1,5 +1,5 @@
 #logs
-  = link_to image_tag('rss.gif'), log_feed_url, :class => 'rss'
+  = link_to image_tag('rss.gif'), log_feed_url(current_game), :class => 'rss'
   
   %h3= 'Events'[]
   .list
@@ -8,4 +8,4 @@
         = log_link log
         
 - content_for :head do
-  = auto_discovery_link_tag :atom, log_feed_url, :title => 'Events for {account}'[:event_for_account, current_account.name]
+  = auto_discovery_link_tag :atom, log_feed_url(current_account), :title => 'Events for {account}'[:event_for_account, current_account.name]
