--- a/app/views/games/_form.html.haml
+++ b/app/views/games/_form.html.haml
@@ -12,17 +12,22 @@
       - else
         = f.text_field :team_size, :class => 'text required small'
 
-  - unless @game.new_record?
-    %tr
-      %td.label &nbsp;
-      %td.submit= submit_tag 'Update', :disable_with => 'Updating'[] + '&hellip;'
+  %tr
+    %td.label &nbsp;
+    %td.submit= create_or_update_button @game
     
 %h3= 'Details'[]
 %table.form
   %tr
+    %td.label= 'Player roles'[]
+    %td.field
+      = f.text_area :player_roles
+      .notes= 'Player roles, one per line. E.g.: Offense, Defense.'
+
+  %tr
     %td.label= 'Rules'[]
     %td.field
-      = f.text_area :rules, :class => 'text'
+      = f.text_area :rules
 
   %tr
     %td.label= 'Newbie limit'[]
@@ -30,7 +35,6 @@
       = f.text_field :newbie_limit, :class => 'text required small'
       .notes= 'Number of matches a user must play to be part of normal rankings.'[]
 
-  - unless @game.new_record?
-    %tr
-      %td.label &nbsp;
-      %td.submit= submit_tag 'Update', :disable_with => 'Updating'[] + '&hellip;'
+  %tr
+    %td.label &nbsp;
+    %td.submit= create_or_update_button @game
