--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -212,6 +212,10 @@ table.form
       :border-width 1px
       :padding 2px
       :font-size 12px
+      :margin 0
+      
+    textarea
+      :height 7em
       
     input.required
       :background-image url(../images/required_bg.gif)
@@ -232,6 +236,7 @@ table.form
     :padding-right 20px
     :text-align right
     :width 25%
+    :vertical-align top
     
   td.field
     :width 75%
@@ -329,6 +334,9 @@ table.form
     #error
     :background-color #FCC
     :border solid 1px #C66
+    
+  #no_data
+    :margin-top 1.5em
 
   #logs
     a.rss
