--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -174,7 +174,10 @@ table.form {
       border-style: solid;
       border-width: 1px;
       padding: 2px;
-      font-size: 12px; }
+      font-size: 12px;
+      margin: 0; }
+    table.form td textarea {
+      height: 7em; }
     table.form td input.required {
       background-image: url(../images/required_bg.gif);
       background-repeat: no-repeat;
@@ -189,7 +192,8 @@ table.form {
     padding-left: 10px;
     padding-right: 20px;
     text-align: right;
-    width: 25%; }
+    width: 25%;
+    vertical-align: top; }
   table.form td.field {
     width: 75%; }
 
@@ -264,6 +268,8 @@ table.form {
   border: solid 1px #DD9A24;
   background-color: #FCC;
   border: solid 1px #C66; }
+#bd #no_data {
+  margin-top: 1.5em; }
 #bd #logs a.rss {
   float: right;
   margin: 0;
