--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -26,14 +26,16 @@
 
       #menu.clear
         .column.span-16= render :partial => 'shared/menu'
-        #add_match.column.span-8.last
-          - if enabled_users.size >= 4
-            = link_to_function image_tag('icons/add.png') + ' ' + 'Add match'[], "$('#add_match_form').toggle()"
-          - else
-            #user_minimum= 'You need at least 4 users'[]
-          
-      #add_match_form.column.span-24{ :style => 'display: none' }
-        = render :partial => 'shared/add_match_form'
+        - unless current_game.nil?
+          #add_match.column.span-8.last
+            - if enabled_users.size >= current_game.team_size * 2
+              = link_to_function image_tag('icons/add.png') + ' ' + 'Add match'[], "$('#add_match_form').toggle()"
+            - else
+              #user_minimum= 'You need at least {user_minimum} users'[:you_need_user_minimum_users, current_game.team_size * 2]
+  
+      - unless current_game.nil?
+        #add_match_form.column.span-24{ :style => 'display: none' }
+          = render :partial => 'shared/add_match_form'
   
       - unless @page_title.blank?
         - if @page_title_options[:show]
