--- a/app/views/shared/_menu.html.haml
+++ b/app/views/shared/_menu.html.haml
@@ -1,8 +1,9 @@
 %ul
-  %li{:class => controller.controller_name == 'dashboard' ? 'current' : nil}= link_to 'Dashboard'[], root_path
-  %li{:class => controller.controller_name == 'matches' ? 'current' : nil}= link_to 'Matches'[], game_matches_path(current_game)
-  - if current_game.team_size > 1
-    %li{:class => controller.controller_name == 'teams' ? 'current' : nil}= link_to 'Teams'[], game_teams_path(current_game)
+  - unless current_game.nil?
+    %li{:class => controller.controller_name == 'dashboard' ? 'current' : nil}= link_to 'Dashboard'[], root_path
+    %li{:class => controller.controller_name == 'matches' ? 'current' : nil}= link_to 'Matches'[], game_matches_path(current_game)
+    - if current_game.team_size > 1
+      %li{:class => controller.controller_name == 'teams' ? 'current' : nil}= link_to 'Teams'[], game_teams_path(current_game)
   %li{:class => controller.controller_name == 'games' ? 'current' : nil}= link_to 'Games'[], games_path
   %li{:class => controller.controller_name == 'users' ? 'current' : nil}= link_to 'Users'[], users_path
   - if admin?
