--- a/app/views/dashboard/index.html.haml
+++ b/app/views/dashboard/index.html.haml
@@ -34,7 +34,7 @@
           %td
             %label= 'Goals scored'[] + ':'
             = @goals_scored
-        - unless @all_time_high.nil? && @all_time_low.nil?
+        - unless true && @all_time_high.nil? && @all_time_low.nil?
           %tr
             %td
               - unless @all_time_high.nil?
