--- a/app/views/pages/index.html.haml
+++ b/app/views/pages/index.html.haml
@@ -4,7 +4,7 @@
   Score Keeper is a very simple web app for keeping score, rankings, etc. for matches.
   
 %p
-  Please note that Score Keeper currently only supports 2-on-2 games so you must have at least 4 users to create a match. Support for 1-on-1 games is planned and will hopefully be available soon.
+  Score Keeper now supports games with two teams of equal size such as 1-on-1, 2-on-2, etc.
   
 - content_for :sidebar do
   %h2
