Made impersonation work again

--- a/app/views/accounts/show.html.haml
+++ b/app/views/accounts/show.html.haml
@@ -10,7 +10,7 @@
     - @account_users.each do |user|
       %tr{ :class => cycle('odd', 'even') }
         %td= h(user.name)
-        %td= user.display_name
+        %td= h(user.display_name)
         %td= mail_to user.email
         %td= user.game_participations.sum(:matches_played)
         %td= link_to 'Impersonate', impersonate_session_path(user), :method => :put
