--- a/app/views/shared/_login.html.haml
+++ b/app/views/shared/_login.html.haml
@@ -1,7 +1,8 @@
 - form_tag session_path('switch_game'), :method => :put do
   #user
-    = render :partial => 'shared/current_game'
-    |
+    - if current_game.nil?
+      = render :partial => 'shared/current_game'
+      |
     %span.current_user= link_to current_user.login, current_user
     |
     - unless session[:real_user_id].blank?
