--- a/app/views/accounts/new.html.haml
+++ b/app/views/accounts/new.html.haml
@@ -1,4 +1,4 @@
-%h2= 'Create account'[]
+- title 'Sign up', :show => true
 = error_messages_for :account
 = error_messages_for :user
 = render :partial => 'form'
