--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -729,6 +729,10 @@ body.public
   h1
     :font-size 19px
     
+  div.visible
+    :padding-left 20px
+    :padding-right 20px
+    
   h2
     :font-size 17px
     
@@ -738,6 +742,13 @@ body.public
   #new_account
     h3
       margin-bottom 1.5em
+      
+    input
+      &.text
+        :border 1px solid #999999
+      
+      &.domain
+        width: 14em
 
     .field
       :margin-bottom 0.5em
