--- a/app/views/layouts/public.html.haml
+++ b/app/views/layouts/public.html.haml
@@ -28,7 +28,13 @@
           #logo= link_to image_tag('logo.gif'), root_url
   
         - unless @page_title.blank?
-          %h2#page_title= @page_title
+          - if @page_title_options[:show]
+            .visible
+              %h2#page_title
+                %span= @page_title
+          - else
+            %h2#page_title= @page_title
+
         #bd.column{ :class => sidebar.blank? ? 'span-24' : 'span-18' }
           - if flash.keys.length > 0
             #messages
