--- a/app/views/games/_form.html.haml
+++ b/app/views/games/_form.html.haml
@@ -11,7 +11,7 @@
         = @game.team_size
       - else
         = f.text_field :team_size, :class => 'text required small'
-        .notes= 'Must between 1 and 3.'[]
+        .notes= 'Must be between 1 and 3.'[]
 
   %tr
     %td.label &nbsp;
