--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -253,6 +253,9 @@ table.form
       :background-color #77BBDD
       :padding 3px
       :color #FFFFFF
+      
+      a
+        :color #CCEEFF
 
     td
       :border 0
