--- a/app/views/accounts/_form.html.haml
+++ b/app/views/accounts/_form.html.haml
@@ -2,7 +2,7 @@
   %h3= 'Basics'[]
   %table.form
     %tr
-      %td.label= 'Subdomain'[]
+      %td.label= f.label :domain, 'Subdomain'[]
       %td.field
         http://
         = f.text_field :domain, :class => 'text domain'
@@ -17,22 +17,22 @@
   - fields_for @user do |u|
     %table.form
       %tr
-        %td.label= 'Username'[]
+        %td.label= u.label :login, 'Username'[]
         %td.field
           = u.text_field :login, :class => 'text'
 
       %tr
-        %td.label= 'Email'[]
+        %td.label= u.label :email, 'Email'[]
         %td.field
           = u.text_field :email, :class => 'text'
 
       %tr
-        %td.label= 'Password'[]
+        %td.label= u.label :password, 'Password'[]
         %td.field
           = u.password_field :password, :class => 'text'
 
       %tr
-        %td.label= 'Confirm Password'[]
+        %td.label= u.label :password_confirmation, 'Confirm Password'[]
         %td.field
           = u.password_field :password_confirmation, :class => 'text'
 
