Made time zone label link to time zone drop down

--- a/app/views/accounts/_form.html.haml
+++ b/app/views/accounts/_form.html.haml
@@ -9,7 +9,7 @@
         = '.' + account_domain
 
     %tr
-      %td.label= 'Time zone'[]
+      %td.label= f.label :time_zone, 'Time zone'[]
       %td.field
         = f.time_zone_select :time_zone, nil
   
