--- a/app/views/shared/_footer.haml
+++ b/app/views/shared/_footer.haml
@@ -4,7 +4,7 @@
     = '&middot;'
     = link_to 'Project home'[], 'http://scorekeepr.dk/', :target => '_blank'
     = '&middot;'
-    = link_to 'Issue tracker'[], 'http://larssg.lighthouseapp.com/projects/8262-score-keeper/overview', :target => '_blank'
+    = link_to 'Issue tracker'[], 'http://code.google.com/p/scorekeeper/issues/list', :target => '_blank'
     = '&middot;'
     = link_to 'Source code'[], 'http://github.com/larssg/score-keeper/tree/master', :target => '_blank'
 
