--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -288,6 +288,24 @@ table.form
       :padding-bottom 5px
       :border-bottom 1px solid #333333
 
+  div.pagination
+    span, a
+      :display inline
+      :border 1px solid #EEEEEE
+      :padding-left 3px
+      :padding-right 3px
+      
+    a:hover
+      :text-decoration none
+      :background-color #DDDDDD
+  
+    .current
+      :background-color #DDDDDD
+      
+    .disabled
+      :border 1px solid #FFFFFF
+      :color #999999
+
   #errorExplanation
     :margin-top 1em
     :border 1px solid #999999
