Speed improvements to match list with filters

--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -294,12 +294,15 @@ table.form
       :border 1px solid #EEEEEE
       :padding-left 3px
       :padding-right 3px
+      :padding-top 1px
+      :padding-bottom 1px
       
     a:hover
       :text-decoration none
       :background-color #DDDDDD
   
     .current
+      :font-weight bold
       :background-color #DDDDDD
       
     .disabled
